--- a/escom-bpm-web/src/main/webapp/view/common/dict-rights-childs.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/common/dict-rights-childs.xhtml
@@ -26,7 +26,7 @@
             </p:headerRow>
 
             <p:column headerText="#{bundle.RightOwner}" >
-                <p:panelGrid columns="2" layout="grid" columnClasses="ui-grid-col-2,ui-grid-col-10" styleClass="ui-panelgrid-blank">
+                <p:panelGrid columns="2" columnClasses="ui-grid-col-2,ui-grid-col-10" styleClass="ui-panelgrid-blank">
                     <h:graphicImage value="/resources/icon/#{right.icon}.png"/>
                     <p:outputLabel value="#{right.name}"/>
                 </p:panelGrid>
