--- a/escom-bpm-web/src/main/webapp/view/companies/departaments/department-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/companies/departaments/department-card.xhtml
@@ -18,8 +18,7 @@
 
     <ui:define name="page_body">
       <p:tab title="#{bundle.Explorer}">
-        <p:panelGrid columns="1" layout="grid" styleClass="ui-panelgrid-blank ui-grid-col-12 col-padding"
-                     columnClasses="ui-grid-col-12 col-padding">
+        <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-panelgrid-blank ui-grid-col-12 col-padding">
 
             <p:outputLabel value="#{bundle.Company}"/>
             <p:inputText value="#{departmentCardBean.getCompanyName()}" disabled="true" styleClass="ui-grid-col-12" />
