--- a/escom-bpm-web/src/main/webapp/view/errors/login-error.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/errors/login-error.xhtml
@@ -28,7 +28,7 @@
                 <p:autoUpdate />
             </p:messages>
             <p:panel styleClass="panelLogin">             
-                <p:panelGrid id="panelLogin" columns="2" layout="grid" columnClasses="ui-grid-col-3, ui-grid-col-12">
+                <p:panelGrid id="panelLogin" columns="2" columnClasses="ui-grid-col-3, ui-grid-col-12">
                     <p:graphicImage name="/images/escom_logo.jpg"  /> 
                     <h:panelGroup>
                         <h3>
