--- a/escom-bpm-web/src/main/webapp/view/staffs/staff-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/staffs/staff-card.xhtml
@@ -10,7 +10,7 @@
     <ui:define name="page_body">
 
         <p:tab title="#{bundle.Explorer}">     
-            <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 ui-panelgrid-blank col-padding" >       
+            <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 ui-panelgrid-blank col-padding" >       
 
                 <p:outputLabel value="#{bundle.OrgUnit}"/>                
                 <p:inputText value="#{staffCardBean.editedItem.orgUnit}" disabled="true" styleClass="ui-grid-col-12" />                
