--- a/escom-bpm-web/src/main/webapp/view/sys/noSaveDlg.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/sys/noSaveDlg.xhtml
@@ -8,9 +8,9 @@
     <p:dialog header="#{bundle.DataNoSave}" widgetVar="confirm" width="470" height="195" modal="true" resizable="false"
               maximizable="false" closeOnEscape="true">
         <h:form>
-            <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 ui-panelgrid-blank">
+            <p:panelGrid columns="1"  columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 ui-panelgrid-blank">
                 <p:panel styleClass="ui-grid-col-12">
-                    <p:panelGrid columns="2" layout="grid" columnClasses="ui-grid-col-4, ui-grid-col-8" styleClass="ui-grid-col-12 ui-panelgrid-blank">
+                    <p:panelGrid columns="2"  columnClasses="ui-grid-col-4, ui-grid-col-8" styleClass="ui-grid-col-12 ui-panelgrid-blank">
                         <p:graphicImage id="itemIcon" value="/resources/images/info.jpg"/>
                         <h:outputText value="#{bundle.PressSaveOrCancel}" />
                     </p:panelGrid>
