--- a/escom-bpm-web/src/main/webapp/view/templ/templ-dlg.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/templ-dlg.xhtml
@@ -49,7 +49,7 @@
 
             <pe:layoutPane id="center" position="center" resizable="true">
                 <ui:insert name="centerFacet"/>
-                <h:form id="centerFRM" >
+                <h:form id="centerFRM" style="font-size: 90%; height: 100%;">
                     <p:hotkey bind="esc" id="hotskey"
                               immediate="true"
                               onstart="document.getElementById('centerFRM:btnClose').click();">
