--- a/escom-bpm-web/src/main/webapp/view/admin/counters/counters.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/admin/counters/counters.xhtml
@@ -46,7 +46,7 @@
                         </f:facet>
                     </p:menubar>                                                            
                     
-                    <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 col-padding">
+                    <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 col-padding">
                         <p:messages id="messages" showDetail="true" closable="true" >
                             <p:autoUpdate />
                         </p:messages>
