--- a/escom-bpm-web/src/main/webapp/view/admin/numPattern/num-pattern-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/admin/numPattern/num-pattern-card.xhtml
@@ -9,8 +9,7 @@
 
     <ui:define name="page_body"> 
         <p:tab id="cardTab" title="#{bundle.Explorer}">     
-            <p:panelGrid columns="1" layout="grid" styleClass="ui-panelgrid-blank ui-grid-col-12"
-                         columnClasses="ui-grid-col-12 col-padding" >                
+            <p:panelGrid columns="1" styleClass="ui-panelgrid-blank ui-grid-col-12" columnClasses="ui-grid-col-12" >                
 
                 <p:outputLabel value="#{bundle.NamePattern}" indicateRequired="true"/>
                 <p:inputText id="nameItem" value="#{_bean.editedItem.name}" 
