--- a/escom-bpm-web/src/main/webapp/view/common/error-dlg.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/common/error-dlg.xhtml
@@ -2,19 +2,9 @@
                  xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                  xmlns:p="http://primefaces.org/ui"
                  xmlns:h="http://xmlns.jcp.org/jsf/html">
-    
-    <p:ajaxExceptionHandler type="javax.faces.application.ViewExpiredException"
-                            update="expireDialog"                            
-                            onexception="isClose = 1; PF('expireDialog').show();" />
-    <p:ajaxExceptionHandler type="java.lang.NullPointerException"
-                            update="exceptionDialog"
-                            onexception="isClose = 1; PF('exceptionDialog').show();" />
-    <p:ajaxExceptionHandler type="javax.el.PropertyNotFoundException"
-                            update="exceptionDialog"
-                            onexception="isClose = 1; PF('exceptionDialog').show();" />
-                            
+                               
     <p:dialog id="expireDialog" header="#{msg.SessionExpired}" resizable="false" modal="true" closable="true" closeOnEscape="true" widgetVar="expireDialog" height="240px" width="550px">
-        <p:panelGrid layout="grid" columns="2" columnClasses="ui-grid-col-6, ui-grid-col-6" styleClass="ui-grid-col-12">
+        <p:panelGrid columns="2" columnClasses="ui-grid-col-6, ui-grid-col-6" styleClass="ui-grid-col-12">
             <p:graphicImage name="/images/session_expired.jpg"/> 
             <p:outputLabel value="#{msg.SessionTimeout}" style="color: red;"/>
             <br/>
@@ -23,7 +13,7 @@
     </p:dialog>
     
     <p:dialog id="exceptionDialog" header="#{bundle.Error}" modal="true" closable="true" closeOnEscape="true" widgetVar="exceptionDialog" height="500px">
-        <p:panelGrid layout="grid" columns="1" styleClass="ui-grid-col-12">
+        <p:panelGrid columns="1" styleClass="ui-grid-col-12">
             <p:outputLabel value="#{bundle.Message}" />: Exception '#{pfExceptionHandler.type}' occurred! #{pfExceptionHandler.message}
             <p:accordionPanel activeIndex="0">
                 <p:tab title="#{bundle.Detail}" >
