--- a/escom-bpm-web/src/main/webapp/view/companies/company-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/companies/company-card.xhtml
@@ -18,7 +18,7 @@
 
     <ui:define name="page_body">
         <p:tab id="cardTab" title="#{bundle.Explorer}">
-            <p:panelGrid layout="grid" columns="1" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12 ui-panelgrid-blank col-padding">       
+            <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 ui-panelgrid-blank col-padding">       
                 <p:outputLabel value="#{bundle.Name}" />
                 <p:inputText id="nameItem" value="#{_bean.editedItem.name}"
                              styleClass="ui-grid-col-12"
