--- a/escom-bpm-web/src/main/webapp/view/docs/attaches/attaches.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/attaches/attaches.xhtml
@@ -71,7 +71,7 @@
                     </p:column>
 
                     <p:rowExpansion>
-                        <p:panelGrid columns="2" layout="grid" columnClasses="ui-grid-col-2, ui-grid-col-10" styleClass="ui-grid-col-12" >
+                        <p:panelGrid columns="2" columnClasses="ui-grid-col-2, ui-grid-col-10" styleClass="ui-grid-col-12" >
                             <h:outputLabel value="#{bundle.Editor}"/>
                             <p:outputLabel value="#{attache.lockAuthor.shortFIO}" />
 
