--- a/escom-bpm-web/src/main/webapp/view/docs/docTypes/doctype-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/docTypes/doctype-card.xhtml
@@ -11,8 +11,7 @@
     <ui:define name="page_body">
 
         <p:tab title="#{bundle.Explorer}">     
-            <p:panelGrid columns="1" layout="grid" styleClass="ui-grid-col-12 ui-panelgrid-blank "
-                         columnClasses="ui-grid-col-12 col-padding" >
+            <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 ui-panelgrid-blank">
 
                 <p:outputLabel value="#{bundle.Name}" />
                 <p:inputText id="nameItem" value="#{_bean.editedItem.name}" 
