--- a/escom-bpm-web/src/main/webapp/view/docs/document.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/document.xhtml
@@ -26,7 +26,7 @@
                 <p:autoUpdate />
             </p:messages>
             <p:panel styleClass="panelLogin">
-                <p:panelGrid columns="2" layout="grid" columnClasses="ui-grid-col-3, ui-grid-col-12" styleClass="ui-grid-col-12">
+                <p:panelGrid columns="2" columnClasses="ui-grid-col-3, ui-grid-col-12" styleClass="ui-grid-col-12">
                     <p:graphicImage name="/images/escom_logo.jpg"  /> 
                     <h:panelGroup styleClass="ui-grid-col-12">
                         <h4>
