--- a/escom-bpm-web/src/main/webapp/view/docs/reports/count-types.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/reports/count-types.xhtml
@@ -53,12 +53,12 @@
                         </f:facet>
                     </p:menubar>
                     
-                    <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12">
-                        <p:panelGrid columns="3" layout="grid" styleClass="ui-grid-col-12"
+                    <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12">
+                        <p:panelGrid columns="3" styleClass="ui-grid-col-12"
                                      columnClasses="ui-grid-col-3, ui-grid-col-6, ui-grid-col-3" >
                             <h:panelGroup>
                                 <p:outputLabel value="#{bundle.PeriodSelected}"/>
-                                <p:panelGrid columns="2" layout="grid" columnClasses="col10r, ui-grid-col-10" styleClass="ui-grid-col-12">
+                                <p:panelGrid columns="2" columnClasses="col10r, ui-grid-col-10" styleClass="ui-grid-col-12">
                                     #{bundle.With}
                                     <p:calendar value="#{docReportBean.dateStart}" id="dateStart" styleClass="ui-grid-col-12"
                                                 navigator="true" yearRange="c-120:c+20"
@@ -68,7 +68,7 @@
                                         <p:ajax event="dateSelect" listener="#{docReportBean.dateStartChange()}"/>
                                     </p:calendar>
                                 </p:panelGrid>
-                                <p:panelGrid columns="2" layout="grid" columnClasses="col10r, ui-grid-col-10" styleClass="ui-grid-col-12">
+                                <p:panelGrid columns="2" columnClasses="col10r, ui-grid-col-10" styleClass="ui-grid-col-12">
                                     #{bundle.At}
                                     <p:calendar value="#{docReportBean.dateEnd}" id="dateEnd" styleClass="ui-grid-col-12"
                                                 navigator="true" yearRange="c-120:c+20"
@@ -89,7 +89,7 @@
                                 </p:treeNode>
                             </p:tree>
                             
-                            <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12">
+                            <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12">
                                 <p:commandButton value="#{bundle.Print}" styleClass="ui-grid-col-12 without-spaces"
                                                  rendered="#{docReportBean.pieModel != null}"
                                                  actionListener="#{docReportBean.onPreViewReport()}">
