--- a/escom-bpm-web/src/main/webapp/view/errors/505.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/errors/505.xhtml
@@ -22,12 +22,12 @@
     <h:body>
         <h:form>
             <p:panel styleClass="panelLogin">
-                <p:panelGrid columns="2" layout="grid" columnClasses="ui-grid-col-3, ui-grid-col-9" styleClass="ui-grid-col-12">
+                <p:panelGrid columns="2" columnClasses="ui-grid-col-3, ui-grid-col-9" styleClass="ui-grid-col-12">
                     <p:graphicImage name="/images/escom_logo.jpg"  />
                     <h2>#{bundle.INTERNAL_ERROR}</h2>
                 </p:panelGrid>
                 <br/><br/>
-                <p:panelGrid  columns="1" layout="grid" columnClasses="ui-grid-col-12">
+                <p:panelGrid  columns="1" columnClasses="ui-grid-col-12">
                     <h:outputText value="#{requestScope['javax.servlet.error.message']}" style="color: red;" />  
                 </p:panelGrid>
                 <br/><br/>
