--- a/escom-bpm-web/src/main/webapp/view/errors/login-incorrect.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/errors/login-incorrect.xhtml
@@ -23,7 +23,7 @@
         <h:form id="login" onsubmit="action='j_security_check';" prependId="false">
 
             <p:panel styleClass="panelLogin">             
-                <p:panelGrid id="panelLogin" columns="2" layout="grid" columnClasses="ui-grid-col-3, ui-grid-col-12">
+                <p:panelGrid id="panelLogin" columns="2" columnClasses="ui-grid-col-3, ui-grid-col-12">
                     <p:graphicImage name="/images/escom_logo.jpg"  /> 
                     <h:panelGroup>
                         <h3>
