--- a/escom-bpm-web/src/main/webapp/view/partners/groups/partnergroup-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/partners/groups/partnergroup-card.xhtml
@@ -16,8 +16,7 @@
 
     <ui:define name="page_body">
         <p:tab id="cardTab" title="#{bundle.Explorer}">
-            <p:panelGrid columns="1" layout="grid" styleClass="ui-grid-col-12 ui-panelgrid-blank col-padding"
-                         columnClasses="ui-grid-col-12 col-padding" >
+            <p:panelGrid columns="1" styleClass="ui-grid-col-12 ui-panelgrid-blank col-padding" columnClasses="ui-grid-col-12">
 
                 <p:outputLabel value="#{bundle.Code}" />            
                 <p:inputText value="#{_bean.editedItem.code}" id="code"
