--- a/escom-bpm-web/src/main/webapp/view/partners/partner-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/partners/partner-card.xhtml
@@ -9,7 +9,7 @@
 
     <ui:define name="page_body">
         <p:tab title="#{bundle.Explorer}"> 
-            <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12 ui-panelgrid-blank">
+            <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 ui-panelgrid-blank">
 
                 <p:outputLabel value="#{bundle.Code}" />            
                 <p:inputText value="#{_bean.editedItem.code}" id="code"
@@ -69,7 +69,7 @@
             </p:panelGrid>
         </p:tab> 
         <p:tab title="#{bundle.Documents}"> 
-            <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12">
+            <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12">
                 <ui:include src="/view/docs/doc-list.xhtml" >
                     <ui:param name="_docs" value="#{_bean.editedItem.docsList}" />
                 </ui:include>
