--- a/escom-bpm-web/src/main/webapp/view/partners/types/partnertype-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/partners/types/partnertype-card.xhtml
@@ -10,7 +10,7 @@
     <ui:define name="page_body">
 
         <p:tab id="cardTab" title="#{bundle.Explorer}">     
-            <p:panelGrid columns="1" styleClass="ui-grid-col-12 ui-panelgrid-blank" layout="grid" columnClasses="ui-grid-col-12 col-padding" >
+            <p:panelGrid columns="1" styleClass="ui-grid-col-12 ui-panelgrid-blank" columnClasses="ui-grid-col-12" >
                 <p:outputLabel value="#{bundle.ShortName}" />
                 <p:inputText id="nameItem" value="#{_bean.editedItem.name}" 
                                  onkeypress="checkEsc(#{_bean.cancelBtnName});"
