--- a/escom-bpm-web/src/main/webapp/view/templ/templ-service.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/templ-service.xhtml
@@ -50,7 +50,7 @@
     </ui:define>
     
     <ui:define name="rightFormContent">
-        <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12" styleClass="ui-panelgrid-blank">                               
+        <p:panelGrid columns="1"  columnClasses="ui-grid-col-12" styleClass="ui-panelgrid-blank">                               
             <ui:insert name="serviceParams"/>
         </p:panelGrid>
         <p:commandButton id="btnEastSave" update="eastFRM" style="display: none;" />
