--- a/escom-bpm-web/src/main/webapp/view/users/groupsUsers/usergroup-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/users/groupsUsers/usergroup-card.xhtml
@@ -18,7 +18,7 @@
 
     <ui:define name="page_body">
         <p:tab id="cardTab" title="#{bundle.Explorer}">             
-            <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12" styleClass="ui-panelgrid-blank ui-grid-col-12 ui-panelgrid-blank" >
+            <p:panelGrid columns="1"  columnClasses="ui-grid-col-12" styleClass="ui-panelgrid-blank ui-grid-col-12 ui-panelgrid-blank" >
                 <p:outputLabel value="#{bundle.Name}:"/>
                 <p:inputText id="nameItem" value="#{_bean.editedItem.name}"
                             styleClass="ui-grid-col-12"
